min-height 100vh - 120px to prevent jumpy scrolling on iOS

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,8 @@ body {
 }
 
 #__next {
-  @apply min-h-screen flex flex-col;
+  min-height: calc(100vh - 120px);
+  @apply flex flex-col;
 }
 
 pre {
